// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icons/general/IconTrackPrevious should correctly render default icon 1`] = `
<AccessibleSVG
  className="icon-track-previous "
  height={14}
  viewBox="0 0 14 14"
  width={14}
>
  <path
    className="fill-color"
    d="M6.31 7.88l5 4.81a1 1 0 0 0 1.41 0A1 1 0 0 0 13 12V2.35a1 1 0 0 0-1-1 1 1 0 0 0-.69.28l-5 4.81a1 1 0 0 0 0 1.41zM2 1a1 1 0 0 1 1 1v10a1 1 0 0 1-1 1 1 1 0 0 1-1-1V2a1 1 0 0 1 1-1z"
    fill="#999"
  />
</AccessibleSVG>
`;

exports[`icons/general/IconTrackPrevious should correctly render icon with specified props 1`] = `
<AccessibleSVG
  className="icon-track-previous test"
  height={100}
  title="title"
  viewBox="0 0 14 14"
  width={200}
>
  <path
    className="fill-color"
    d="M6.31 7.88l5 4.81a1 1 0 0 0 1.41 0A1 1 0 0 0 13 12V2.35a1 1 0 0 0-1-1 1 1 0 0 0-.69.28l-5 4.81a1 1 0 0 0 0 1.41zM2 1a1 1 0 0 1 1 1v10a1 1 0 0 1-1 1 1 1 0 0 1-1-1V2a1 1 0 0 1 1-1z"
    fill="#999"
  />
</AccessibleSVG>
`;
